--- a/ProjektDokumentation/sektioner/Integrationstest/NetTilMaal.tex
+++ b/ProjektDokumentation/sektioner/Integrationstest/NetTilMaal.tex
@@ -31,3 +31,19 @@ Testene laves ved at måle på nettet med Måleenheden, som er forbundet til bru
 	\caption{Resultatet af integrationstest mellem nettet og Måleenhed}
 	\label{tab:intTest2}
 \end{table}
+
+Opstillingen til den samlede integrationstest kan ses på figur \ref{fig:Opstilling1} og \ref{fig:Opstilling2}
+
+\begin{figure}[H] 
+	\centering
+	\includegraphics[width=0.9\textwidth]{Figure/Opstillingudenplc}
+	\caption{Opstilling af samlet system uden PLC}
+	\label{fig:Opstilling1}
+\end{figure}
+
+\begin{figure}[H] 
+	\centering
+	\includegraphics[width=0.9\textwidth]{Figure/Opstillingmedplc}
+	\caption{Opstilling af samlet system med PLC}
+	\label{fig:Opstilling2}
+\end{figure}
