Kontrolmodul dokumentation færdigskrevet, brugergrænseflade dokumentation påbegyndt

--- a/ProjektDokumentation/sektioner/Design/HMI.tex
+++ b/ProjektDokumentation/sektioner/Design/HMI.tex
@@ -1,1 +1,10 @@
 % !TEX root = ../../prj4projektdokumentation.tex
+
+\section{Brugergrænseflade}
+\label{HMI}
+
+Brugergrænsefladen består i dette projekt af en HMI KTP 600. Denne sidder på samme board som PLC'en og kan tilgåes gennem swicthen !!!!CSM!!!. Den har to skærme; Automatisk mode og Manuel mode, hvoraf automatisk mode er startskærm ved opstart.
+
+\subsection{Automatisk mode}
+
+\subsection{Manuel mode}
