--- a/ProjektDokumentation/sektioner/Maale/Sampling.tex
+++ b/ProjektDokumentation/sektioner/Maale/Sampling.tex
@@ -75,7 +75,7 @@ delay_2 = delay - \frac{\SI{29.131}{\milli\second}-\SI{20}{\milli\second}}{64} =
 
 Ved at indsætte dette delay, kommer sampletiden meget tæt på de $\SI{20}{\milli\second}$, og med småjusteringer af delayet, findes den rigtige værdi til $\SI{40}{\micro\second}$, se Figur \ref{fig:MEsampleTest2}, hvor sampletiden er aflæst til $\SI{20,057}{\milli\second}$.
 
-\begin{figure}[htbp] % (alternativt [H])
+\begin{figure}[H] % (alternativt [H])
 	\centering
 	\includegraphics[width=0.6\textwidth]{Figure/MEtestSample2}
 	\caption{Reel sampletid med endeligt delay, fundet med Logic Analyser}
