--- a/ProjektDokumentation/sektioner/Maale/Fourier.tex
+++ b/ProjektDokumentation/sektioner/Maale/Fourier.tex
@@ -1,17 +1,29 @@
 % !TEX root = ../../prj4projektdokumentation.tex
 
-\subsection{Udregninger på PSOC}
-I dette afsnit beskrives, hvordan fourier er lavet i PSOC'en men også hvordan udregninger er lavet til rms, power factor og THD.
-
-\subsubsection{Fourier algoritme}
-Når Strøm og spænding er samplet ned i 2 arrays, kan de sættes ind i funktionen:
+\subsection{Fourier algoritme}
+Når Strøm og spænding er samplet. Laves der Fourier på dem hver især vha. funktionen \ref{FFTproto}
 
 \lstset{caption={FFT prototype},label={FFTproto}}
 \begin{lstlisting}
 void FFT(long m,double *x,double *y, double *u);
 \end{lstlisting}
 
-Denne funktion dækker over en algoritme der kan lave FFT\footnote{Fast Fourier Transformation}. Algoritmen er fundet på et Cypress forum\cite{FFTalgo}. Funktionen kan lave FFT på et array med 64 tal, hvor den laver det array om til de reale tal og fylder et andet array med de imaginær tal. Derudover fylder den et tredje array med absolute amplitude værdiger. Det første argument m er eksponent til 2, så det giver størrelsen af arrayet. Ved 64 bliver eksponent 6.
+Denne funktion dækker over en algoritme der kan lave FFT\footnote{Fast Fourier Transformation} på et samplet signal. Algoritmen er fundet på et Cypress forum\cite{FFTalgo}. Funktionen kan lave FFT på et array med 64 tal, hvor den laver arrayet om til de reale tal og fylder et andet array med de imaginær tal. Derudover fylder den et tredje array med absolute amplitude værdiger. Det første argument m er eksponent til 2, så det giver størrelsen af arrayet. Ved 64 bliver eksponent 6.
+
+Algoritmen starter med at lave noget der kaldes "bit-reversal", Dette betyder at man bytter pladserne i arrayet på følgende måde:
+
+\begin{table}[H] 
+	\centering 
+	\begin{tabular}{|l|l|l|l|l|l|} % Afstem antal tegn og kolonner! (l for venstre, c for center, r for højre, | for lodret streg) 
+		\hline 	% Vandret streg
+		Array plads		& array plads binær & $\rightarrow$ 	& array plads binær    	& Array plads 	 \\ \hline 	% Linjeskift og vandret streg
+		 	&   			& $\rightarrow$ & 				& 	 \\ \hline 
+		 	&    			& $\rightarrow$ &					& 		 \\ \hline 
+	\end{tabular} 
+	\caption{X} 
+	\label{tab:X} 
+\end{table}
+ 
 
 
 Ved samplingstiden der svare til at der kan måles over en periode på 50Hz og der samples 64 gange bliver samplefrekvensen:
@@ -27,6 +39,8 @@ f_{Bin} = \dfrac{3200Hz}{64} = 50
 \end{align}
 
 Dette betyder at på plads nummer 2 i arrayet med absolute værdiger, ligger størrelsen på de signaler der har en frekvens på 50Hz og på plads nummer 3, signaler med 100Hz osv.
+
+\subsection{Beregning af rms og power faktor}
 
 \subsubsection{Beregning af rms ved 50Hz}
 Rms kan per definition beregnes for strøm og spænding på ved følgende: 
@@ -44,5 +58,33 @@ return u[1]/sqrt(2);
 
 Hvor "u" er et array med absolute værdiger for spænding eller strøm med frekvensbin på 50.
 
-\subsubsection{title}
+\subsubsection{Beregning af Power faktor ved 50Hz}
+
+Power faktor kan er definition udregnes som cosinus til vinklen mellem strøm og spænding. Ved at lave Fourier på signalet, kan det komplekse tal anvendes til at lave en vektor. Power faktor for signalet på 50Hz bliver derfor vinklen mellem spænding og strøm på andet plads i arrayet.
+
+Vinklen på et kompleks tal er per definition:
+
+\begin{align}
+\delta = atan(\dfrac{Imaginaire}{Real})
+\end{align}
+
+Power faktor kan derfor regnes som:
+\begin{align}
+PF = cos(\delta - \beta)
+\end{align}
+
+Måleenheden kan ikke se forskel på om det er et lag eller lead system. Det forventes næste altid at systemet har mere induktiv end kapacitiv belastning. Derudover betyder det heller ikke noget for effektiviteten om det er lag eller lead. Derfor er det blevet ned prioriteret på måleeneheden.
+
+\lstset{caption={Funktion til beregning af 50Hz PF},label={PFfunk}}
+\begin{lstlisting}
+double calculate_50Hz_PF()
+{
+double angle_Volt = atan(Im_volt[1]/Re_volt[1]);
+double angle_Ampere = atan(Im_Ampere[1]/Re_Ampere[1]);    
+return cos(angle_Volt-angle_Ampere);
+}
+\end{lstlisting}
+ 
+    
+
   
