Modultest styringsenhed påbegyndt

--- a/ProjektDokumentation/prj4projektdokumentation.tex
+++ b/ProjektDokumentation/prj4projektdokumentation.tex
@@ -181,6 +181,7 @@ linkcolor=Black, citecolor=Black]{hyperref}
 \input{sektioner/Design/PLC}
 \input{sektioner/Design/HMI}
 \input{sektioner/Design/Arduino}
+\input{sektioner/Design/Styringsenhed/Modultest}
 \chapter{Design af Måleenhed}
 \input{sektioner/Maale/Hardware}
 \input{sektioner/Maale/Software}
