--- a/ProjektDokumentation/bibfil.bib
+++ b/ProjektDokumentation/bibfil.bib
@@ -49,8 +49,18 @@ For at referencerne opdaterer sig skal der compiles, køres "Bibtex 8-bit" komma
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Design af Måleenhed %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %Links - URLdate er den dato hvor linket er SET af os. Date-Modified er den dato linket er modificeret på nettet (hvis det fremgår)
+@online{Cooley,
+	Date-Modified = {2016-01-13 00:00:00 +0000},
+	Title = {Cooley and Tukey FFT algoritme},
+	Url = {https://en.wikipedia.org/wiki/Cooley%E2%80%93Tukey_FFT_algorithm},
+	Urldate = {2017-05-20}}
+
 @online{FFTalgo,
 	Date-Modified = {2016-01-13 00:00:00 +0000},
 	Title = {Cypress forum},
-	Url = {http://www.cypress.com/forum/},
+	Url = {http://www.cypress.com/forum/psoc-5-device-programming/how-implement-fft-psoc5},
 	Urldate = {2017-04-10}}
+	
+
+	
+	
