--- a/ProjektDokumentation/sektioner/Design/Trinskifter.tex
+++ b/ProjektDokumentation/sektioner/Design/Trinskifter.tex
@@ -2,6 +2,7 @@
 
 
 \section{Trinskifter}
+\label{sec:Trinskifter}
 For at kunne skifte trin og dermed spændingsniveau på tranformeren er der opbygget et kredsløb med tre kontaktrelæer - et for hvert muligt trin. Det er et krav, at relæerne skal kunne styres både automatisk og manuelt fra en PLC. Udgangssignalet fra PLC'en er 24VDC,så dette skal relæerne altså kunne holde til. På værkstedet var kun en type relæ der kan holde til 24VDC styresignal, og derfor faldt valget på disse Hengstler 468 relæer. På figuren nedenfor ses tegning af relækredsløbet samt de forskellige belastninger, der kan kobles ind via kontakter. I serie med hver belastningsmodstand sidder en 1 $\Omega$ modstand, som måleenheden måler over. 
 
 
