--- a/ProjektDokumentation/sektioner/Design/PLC.tex
+++ b/ProjektDokumentation/sektioner/Design/PLC.tex
@@ -3,11 +3,12 @@
 \section{Kontrolmodul}
 Kontrolmodulet består primært af to processer; En kommunikationsdel der kan håndtere at modtage data gennem en TCP forbindelse og konvertere disse data til noget der kan bruges i resten af programmet, herunder også HMI delen. En styringsdel der kan bruge disse data i styringen af trinskifteren.
 
-Kontrolmodulet er programmmeret på en Siemens S7-1200 PLC med en 1214C DC/DC/DC CPU og signalmodulet AQ1x12BIT. Sammen med PLC'en sidder en switch af typen !!!!!CSM!!!!! .
+Kontrolmodulet er programmmeret på en Siemens S7-1200 PLC med en 1214C DC/DC/DC CPU og signalmodulet AQ1x12BIT. Sammen med PLC'en sidder en switch af typen CSM 1277 .
 
 
 \subsection{TCP kommunikation}
-Kontrolmodulet er lavet som en client i forhold til kommunikationsmodulet, der er server. Den sender altså en forespørgelse på at modtage data til kommunikationsmodulet, hvorefter den modtager ny data fra den forespurgte enhed. Mere om selve protokollen kan findes i afsnit \ref{TCPprotokol} TCP protokol. Det er kontrolmodulet der oprette TCP forbindelse og står for at nedlægge den igen.
+\label{sec:TCPkommunikation}
+Kontrolmodulet er lavet som en client i forhold til kommunikationsmodulet, der er server. Den sender altså en forespørgelse på at modtage data til kommunikationsmodulet, hvorefter den modtager ny data fra den forespurgte enhed. Mere om selve protokollen kan findes i afsnit \ref{sec:TCPprotokol} TCP protokol. Det er kontrolmodulet der oprette TCP forbindelse og står for at nedlægge den igen.
 
 TCP komunikationen er opdelt i 4 FC'er; OpretForbindelse, SendData, ModtagData og AfslutForbindelse. Simatic TIA portal har nogle indbyggede blokke, man bruger når til Ethernetkommunikation.
 
@@ -86,7 +87,7 @@ ID er det samme som for de resterende kommunikationsblokke. DATA dækker over hv
 	\label{fig:TRCV}
 \end{figure}
 
-Ligeså snart SendDataTimers output går true, sættes Firsttime false, hvilket sætter gem modtaget data netværket igang. Her sat de tidligere beskrevne timer ModtagDataTimer, som også er en on delay timer. Når dens output går true, vælges hvilken global static word array; DataCentralEnhed og DataDecentralEnhed dataet skal gemmes. Disse anvendes i forbindelse med HMI'et. Se afsnit \ref{HMI} for mere herom. Hvilken der bliver valgt afhænger igen af EnhedToReq. Samtidig sættes Firsttimer true, så data igen kan forespørges i SendData funktionen. Den global static boolean Invert, anvendes til den tidligere beskrevne invertering af EnhedToReq. Dette sker i et seperat netværk til sidst i ModtagData funktionen, hvor en true Invert muliggør invertering ved hjælp af en funktion INV og sætter Invert false.
+Ligeså snart SendDataTimers output går true, sættes Firsttime false, hvilket sætter gem modtaget data netværket igang. Her sat de tidligere beskrevne timer ModtagDataTimer, som også er en on delay timer. Når dens output går true, vælges hvilken global static word array; DataCentralEnhed og DataDecentralEnhed dataet skal gemmes. Disse anvendes i forbindelse med HMI'et. Se afsnit \ref{sec:HMI} for mere herom. Hvilken der bliver valgt afhænger igen af EnhedToReq. Samtidig sættes Firsttimer true, så data igen kan forespørges i SendData funktionen. Den global static boolean Invert, anvendes til den tidligere beskrevne invertering af EnhedToReq. Dette sker i et seperat netværk til sidst i ModtagData funktionen, hvor en true Invert muliggør invertering ved hjælp af en funktion INV og sætter Invert false.
 
 SendData og ModtagData funktionerne looper altså i en evig løkke, hvor Måleenheden der forespørges data fra efter hver runde skiftes.
 
@@ -112,7 +113,7 @@ FB'en trinskifter har et input og tre outputs. Input i form af DataDecentralEnhe
 
 Trinskifter består af 13 netværk, 1 initieringsnetværk, 5 automatisk mode netværk og 7 manuel mode netværk. Disse eksekveres i sekvenser, styret af den lokale static integer Step. Netværk 1 er et initieringsnetværk, der sætter Trin2 true og sætter Step til 2 med funktionen MOVE. Step 2 svarer til at systemet er i Trin 2 i automatisk tilstand. Trin 2 i koden er Trin 5 på trintransformeren.
 
-På figur \ref{fig:Trin2AutomatiskMode} ses det netværk i den automatiske del, hvor udgangen Trin 2 er sat. Trin er her en static, der bruges i HMI'et. Se afsnit \ref{HMI}. For at undgå at programmet kan nå at lave et multistep, altså f.eks. fra Trin 1 til Trin 3, er sat en on delay timer, Trin2VentTilNyData. Konstanten VentTid er sat til 2,5 sekunder, hvilket er mere end de 2 sekunder der går før der er ny data. Dermed får man ny data fra et nyt stabilt niveau efter et trinskift og programmet vil altså ikke skifte endnu et trin grundet gamle målingerne.
+På figur \ref{fig:Trin2AutomatiskMode} ses det netværk i den automatiske del, hvor udgangen Trin 2 er sat. Trin er her en static, der bruges i HMI'et. Se afsnit \ref{sec:HMI}. For at undgå at programmet kan nå at lave et multistep, altså f.eks. fra Trin 1 til Trin 3, er sat en on delay timer, Trin2VentTilNyData. Konstanten VentTid er sat til 2,5 sekunder, hvilket er mere end de 2 sekunder der går før der er ny data. Dermed får man ny data fra et nyt stabilt niveau efter et trinskift og programmet vil altså ikke skifte endnu et trin grundet gamle målingerne.
 
 Programmet står altså venter efter timeren. Her kan man ved hjælp trykknapper på HMI'et skifter til ManuelMode. Ved et tryk bliver ManuelMode true og Step bliver sat til 12, som svarer til Trin 2 i manuel mode. Se figur \ref{fig:Trin2ManuelMode}. Hvis en bruger ikke interagerer med systemet, vil inputtet, den unsigned integer SpændingInd, blive sammenlignet med to konstanter 4400 og 3600. Disse to værdier svarer til 10\% over og under det ønskede spændingsniveau nemlig 4000mV. Hvis målinger fra Måleenhederne skulle komme udenfor dette interval vil der bliver skiftet trin. Afhængig af om det er et trin ned eller op MOVES henholdsvis 3 eller 4 over i Step.
 Et trinskift op er vist på figur \ref{fig:Trin2SkiftOp}.
@@ -135,7 +136,7 @@ I manuel mode er konceptet ikke at trinskiftene skal styres af spænidngsmåling
 
 Hvordan et trinskift udføres i programmet er gennemgående det samme, forskellen ligger i hvilke trin der skiftes imellem og om det er et skift op eller ned. Dette gælder både for manuel og automatisk mode.
 
-Herunder er derfor kun vist et eksempel på et trinskiftnetværk. De resterende kan findes i og resten af programmet kan findes i !!!!REFERENCE TIL PLC PROGRAMMET!!!. Dette eksempel er et trinskift op fra trin 2 til trin 3. For at sikre at der altid er forsyning på distributionslinjen skal der altid være et trin på transformeren der er aktivt. Derfor er en on delay timer, TrinSkift2til3, anvendt. Det nye trin, i dette tilfælde trin 3 sættes true, så snart Step bliver 4, mens det gamle trin resettes til false efter 2 sekunder, hvorefter Step bliver sat til 5 og systemet er nu sikkert og uden afbrydelser blevet flyttet til et nyt trin. For flere kedsløbsdetaljer om skiftet på selve transformeren, henvises til !!!!PIGERNES DESIGNAFSNIT!!!!.
+Herunder er derfor kun vist et eksempel på et trinskiftnetværk. De resterende kan findes i og resten af programmet kan findes i !!!!REFERENCE TIL PLCOgHMIprogram!!!. Dette eksempel er et trinskift op fra trin 2 til trin 3. For at sikre at der altid er forsyning på distributionslinjen skal der altid være et trin på transformeren der er aktivt. Derfor er en on delay timer, TrinSkift2til3, anvendt. Det nye trin, i dette tilfælde trin 3 sættes true, så snart Step bliver 4, mens det gamle trin resettes til false efter 2 sekunder, hvorefter Step bliver sat til 5 og systemet er nu sikkert og uden afbrydelser blevet flyttet til et nyt trin. For flere kedsløbsdetaljer om skiftet på selve transformeren, henvises til afsnit \ref{sec:Trinskifter}.
 
 \begin{figure}[H] % (alternativt [H])
 	\centering
