--- a/ProjektDokumentation/sektioner/Maale/Modultest.tex
+++ b/ProjektDokumentation/sektioner/Maale/Modultest.tex
@@ -1,1 +1,5 @@
 % !TEX root = ../../prj4projektdokumentation.tex
+
+\section{Modultest}
+
+Efter udvikling af Måleenheden er der lavet test på modulet 
