--- a/ProjektDokumentation/sektioner/Maale/THD.tex
+++ b/ProjektDokumentation/sektioner/Maale/THD.tex
@@ -16,6 +16,9 @@ THD = \dfrac{\sqrt{V_2^{2}+V_3^{2}+V_4^{2}+V_5^{2}}}{V_{1}}
 \end{align}
 
 \subsubsection{Test af THD beregning i Måleenhed}
+\label{sek:THD}
+
+
 Udregningen af THD i Måleenheden er testet ved at sammenligne med resultatet med en simulering i Matlab. I Matlab er der lavet et signal der svarer til et firkantsignal i frekvensdomænet, hvorefter der er udregnet THD for de første 5 frekvensbins. Matlab koden ses i Listing \ref{list:THDMatlab}. Resultatet af Matlabsimuleringen bliver
 
 \begin{align}
